--- a/docs/migration/2.3.x-3.0.x.md
+++ b/docs/migration/2.3.x-3.0.x.md
@@ -1,7 +1,7 @@
 Migration guide 2.3.x to 3.0.x
 ============================
 
-Below is written down minmal set of action that has be taken to migrate from 2.3.x version:
+Below is written down minimal set of action that has be taken to migrate from 2.3.x version:
 
 ### Dependencies
 
@@ -34,5 +34,5 @@ RoleStore
   });
 ```
 
-Additionally method defineManyRoles has been added, see the [documentation](https://github.com/Narzerus/angular-permission/blob/development/docs/2-manging-roles.md#multiple-roles) if it fits your project business needs.
+Additionally the method defineManyRoles has been added, see the [documentation](https://github.com/Narzerus/angular-permission/blob/development/docs/2-manging-roles.md#multiple-roles) if it fits your project business needs.
 
